--- a/src/App.scss
+++ b/src/App.scss
@@ -161,6 +161,15 @@
           color: rgb(38, 178, 38);
         }
       }
+      .third-number-input {
+        input {
+          width: 28px;
+          height: 40px;
+          margin: 5px 3px;
+          padding: 0 5px;
+          outline: none;
+        }
+      }
       .button, .secondButton {
         padding: 5px 5rem;
         background: var(--secondary);
@@ -180,8 +189,12 @@
         background: transparent;
       }
       .bottom-image {
+        width: 150px;
+        height: 185px;
+        right: 0;
         bottom: 0;
-        text-align: right;
+        overflow-y: hidden;
+        position: absolute;
         @media only screen and (max-width: 768px) {
           margin-top: 20px; 
         }
