--- a/src/App.scss
+++ b/src/App.scss
@@ -172,6 +172,7 @@
         }
       }
       .third-number-input {
+        padding-bottom: 10px;
         input {
           width: 28px;
           height: 40px;
@@ -186,8 +187,9 @@
         margin: 10px 0;
         cursor: pointer;
         font-size: 10px;
-        border-radius: 10px;
+        border-radius: 5px;
         color: var(--white);
+        font-size: 16px;
       }
       .button:hover {
         border: 2px solid var(--secondary);
