--- a/src/App.scss
+++ b/src/App.scss
@@ -102,8 +102,9 @@
       background: var(--white);
       margin: 0 auto;
       display: flex;
+      border-radius: 5px;
       @media only screen and (max-width: 768px) {
-        height: 100%;
+        min-height: 700px;
       }
       @media only screen and (max-width: 768px) {
         max-width: 80%;
@@ -159,9 +160,7 @@
           outline: none;
           margin-bottom: 20px;
           padding: 5px 0;
-          @media only screen and (max-width: 768px) {
-            width: 80%;
-          }
+          width: 80%;  
         }
         span {
           position: absolute;
