--- a/src/App.scss
+++ b/src/App.scss
@@ -154,13 +154,15 @@
       .number-input {
         position: relative;
         input {
-          width: 100%;
+          width: 60%;
           border: none;
           border-bottom: 1px solid var(--primary);
           outline: none;
           margin-bottom: 20px;
           padding: 5px 0;
-          width: 80%;  
+          @media only screen and (max-width: 768px) {
+            width: 80%;
+          }
         }
         span {
           position: absolute;
